--- a/paper/poverty.tex
+++ b/paper/poverty.tex
@@ -433,6 +433,7 @@ With contributions of up to 0.4\% of a country's income (in the U.S.), aggregate
 %However, to end poverty in all its forms, about 5\% of global consumption should be redirected to the poor, enough to raise the global income floor to \$7.15/day. This would require higher tax rates, for example 25\% above 100\$/day and 75\% above 200\$/day. 
 % These rates are expressed on top of the current tax system and apply to post-tax income. For example, the last tax schedule would leave unaffected the 96\% of the world population with a post-tax income per capita below \$3,000/month, reduce by 10\% the post-tax income at \$5,000/month, and reduce it  by 37\% at \$10,000/month. 
 
+% TODO! I can't use the HFCE-rescaled results if I attribute all extra income to the top 1%
 In reality, the global tax rates required to eradicate poverty may well be lower than just indicated, because our calculations used the raw PIP data instead of converting them to nominal terms and rescaling them to national accounts. Once I rescale the data to national accounts (which are more accurate than surveys in high-income countries), % TODO? cite?
 a mild 0.5\% marginal tax above \$100,000/year (i.e. \$274/day) suffices to close the extreme poverty gap. Raising that rate to 15\% would collect 5\% of the world income, enough to finance a global income floor of \$250/month (or \$8.2/day) and end poverty in all its forms. 
 These rates are expressed on top of the current tax system and apply to post-tax income. For example, the last tax schedule would leave unaffected the 99\% of the world population with a post-tax income per capita below \$100,000/year and reduce by 5\% the post-tax income at \$150,000/year. % TODO? those with...?
