--- a/tables/gain.tex
+++ b/tables/gain.tex
@@ -1,46 +1,46 @@
 \begin{table}[b]
 
-\caption[Net gain per country of a global antipoverty tax above \$100,000/year]{\label{tab:tax}Net gain per country of a global antipoverty tax on income above \$100,000/year, for most populous countries in 2030 after 3\% growth.}
+\caption[Net gain per country of a global antipoverty tax.]{\label{tab:tax}Net gain per country of a global antipoverty tax, for most populous countries in 2030 after 3\% growth.}
 \centering
-\begin{tabular}[t]{lrrrr}
-\toprule Tax rate & 0.5\% & 15\% & 0.5\% & 15\%  \\ National accounts adjustment &  & \checkmark & & \checkmark \\  \midrule
-Algeria & 0.00 & 0.00 & 35.50 & 35.63\\
-Angola & 0.39 & 6.64 & 75.47 & 114.15\\
-Argentina & 0.00 & 0.03 & 42.90 & 37.64\\
-Bangladesh & 0.00 & 0.16 & 89.80 & 97.67\\
-Brazil & 0.01 & 0.20 & 25.69 & 24.32\\
-Canada & -0.01 & -0.21 & 10.34 & 8.75\\
-China & 0.00 & 0.00 & 15.24 & 14.60\\
-Colombia & 0.05 & 0.36 & 88.80 & 80.75\\
-Democratic Republic of the Congo & 1.04 & 19.84 & 12.27 & 123.16\\
-Egypt & 0.00 & 0.05 & 263.09 & 238.29\\
-Ethiopia & 0.00 & 1.34 & 0.58 & 29.05\\
-France & -0.01 & -0.29 & 3.89 & 3.09\\
-Germany & -0.01 & -0.42 & 10.00 & 8.24\\
-India & 0.00 & 0.46 & 120.54 & 131.91\\
-Indonesia & 0.00 & 0.07 & 120.42 & 116.23\\
-Iraq & 0.00 & 0.00 & 36.14 & 34.44\\
-Italy & -0.01 & -0.16 & 12.77 & 10.93\\
-Japan & -0.01 & -0.23 & 12.82 & 10.92\\
-Kenya & 0.04 & 2.36 & 100.50 & 126.50\\
-Mexico & 0.00 & 0.11 & 116.20 & 103.37\\
-Morocco & 0.00 & 0.03 & 9.16 & 11.84\\
-Myanmar & 0.00 & 0.12 & 12.39 & 25.84\\
-Nigeria & 0.06 & 5.48 & 15.11 & 76.73\\
-Pakistan & 0.00 & 0.14 & 134.95 & 143.89\\
-Philippines & 0.00 & 0.17 & 106.84 & 104.32\\
-Poland & 0.00 & 0.00 & 83.43 & 72.43\\
-South Korea & 0.00 & 0.00 & 5.77 & 5.00\\
-Spain & 0.00 & -0.02 & 5.92 & 5.18\\
-Sudan & 0.05 & 5.23 & 96.34 & 159.69\\
-Tanzania & 0.05 & 7.31 & 46.99 & 118.62\\
-Thailand & 0.00 & 0.00 & 42.36 & 37.79\\
-Turkey & 0.00 & 0.00 & 62.43 & 54.40\\
-Uganda & 0.15 & 7.66 & 37.56 & 105.46\\
-UK & -0.01 & -0.18 & 13.36 & 11.40\\
-Ukraine & 0.00 & 0.00 & 53.39 & 48.35\\
-USA & -0.04 & -1.06 & 24.66 & 20.31\\
-Vietnam & 0.00 & 0.00 & 1.14 & 1.91\\
+\begin{tabular}[t]{lrrrrrr}
+\toprule Taxation threshold & \multicolumn{2}{c}{\$100/day}  & \multicolumn{2}{c}{\$100,000/year} & \multicolumn{2}{c}{\$100,000/year} \\  Tax rate & 1.18\% & 1.18\% & 0.5\% & 0.5\% & 15\% & 15\%  \\ National accounts adjustment &  & \checkmark &  & \checkmark & & \checkmark \\  \midrule
+Algeria & 0.00 & -0.27 & 0.00 & -0.06 & 0.00 & 0.04\\
+Angola & 3.79 & 5.80 & 0.39 & 2.27 & 6.64 & 24.81\\
+Argentina & -0.05 & -0.36 & 0.00 & -0.14 & 0.03 & -3.81\\
+Bangladesh & 0.03 & -0.22 & 0.00 & -0.14 & 0.16 & 4.00\\
+Brazil & 0.00 & -0.04 & 0.01 & -0.01 & 0.20 & -1.09\\
+Canada & -0.19 & -0.29 & -0.01 & -0.05 & -0.21 & -1.49\\
+China & -0.01 & -0.16 & 0.00 & -0.03 & 0.00 & -0.59\\
+Colombia & 0.15 & -0.29 & 0.05 & -0.10 & 0.36 & -4.36\\
+D.R. Congo & 11.37 & 31.62 & 1.04 & 12.27 & 19.84 & 123.16\\
+Egypt & 0.00 & -0.80 & 0.00 & -0.33 & 0.05 & -7.14\\
+Ethiopia & 0.51 & 2.87 & 0.00 & 0.58 & 1.34 & 29.05\\
+France & -0.16 & -0.20 & -0.01 & -0.03 & -0.29 & -0.80\\
+Germany & -0.19 & -0.28 & -0.01 & -0.06 & -0.42 & -1.66\\
+India & 0.13 & 0.01 & 0.00 & -0.13 & 0.46 & 5.01\\
+Indonesia & 0.00 & -0.48 & 0.00 & -0.22 & 0.07 & -2.12\\
+Iraq & 0.00 & -0.29 & 0.00 & -0.08 & 0.00 & -1.33\\
+Italy & -0.14 & -0.25 & -0.01 & -0.05 & -0.16 & -1.68\\
+Japan & -0.14 & -0.25 & -0.01 & -0.06 & -0.23 & -1.75\\
+Kenya & 1.03 & 1.88 & 0.04 & 0.42 & 2.36 & 13.44\\
+Mexico & 0.01 & -0.56 & 0.00 & -0.23 & 0.11 & -6.15\\
+Morocco & -0.01 & -0.02 & 0.00 & 0.00 & 0.03 & 2.46\\
+Myanmar & 0.03 & 0.34 & 0.00 & 0.03 & 0.12 & 12.01\\
+Nigeria & 2.46 & 9.35 & 0.06 & 2.44 & 5.48 & 57.28\\
+Pakistan & 0.01 & -0.35 & 0.00 & -0.20 & 0.14 & 3.59\\
+Philippines & 0.05 & -0.36 & 0.00 & -0.19 & 0.17 & -1.40\\
+Poland & -0.04 & -0.56 & 0.00 & -0.22 & 0.00 & -6.20\\
+South Korea & -0.10 & -0.16 & 0.00 & -0.03 & 0.00 & -0.75\\
+Spain & -0.12 & -0.16 & 0.00 & -0.02 & -0.02 & -0.72\\
+Sudan & 2.18 & 5.08 & 0.05 & 1.17 & 5.23 & 33.81\\
+Tanzania & 3.20 & 9.50 & 0.05 & 2.51 & 7.31 & 52.46\\
+Thailand & -0.01 & -0.36 & 0.00 & -0.12 & 0.00 & -3.33\\
+Turkey & -0.06 & -0.49 & 0.00 & -0.19 & 0.00 & -5.12\\
+Uganda & 3.70 & 10.20 & 0.15 & 3.06 & 7.66 & 53.93\\
+UK & -0.17 & -0.29 & -0.01 & -0.07 & -0.18 & -1.79\\
+Ukraine & 0.00 & -0.39 & 0.00 & -0.13 & 0.00 & -3.41\\
+USA & -0.41 & -0.57 & -0.04 & -0.13 & -1.06 & -3.61\\
+Vietnam & -0.01 & 0.00 & 0.00 & 0.00 & 0.00 & 0.76\\
 \bottomrule
 \end{tabular}
 \end{table}
