--- a/paper/poverty.tex
+++ b/paper/poverty.tex
@@ -513,9 +513,12 @@ should be addressed to Adrien Fabre~(email: adrien.fabre@cnrs.fr).\end{itemize}
 % \subsection{Additional figures}
 
 \subsection{Additional tables}
+\input{../tables/income.tex}
+\input{../tables/trend.tex}
 \input{../tables/cap.tex}
 \input{../tables/tax.tex}
+\input{../tables/tax4.tex}
+\input{../tables/tax7.tex}
 \input{../tables/floor.tex}
-\input{../tables/gain.tex}
 
 \end{document}
