--- a/tables/cap.tex
+++ b/tables/cap.tex
@@ -1,43 +1,46 @@
 \begin{table}[b]
 
-\caption{\label{tab:cap}Antipoverty caps for major lower-middle income countries in 2030.}
-\centering
-\begin{tabular}[t]{lrrrrrrr}
-\toprule Poverty line (\$/day) & 2.15 & 2.15 & 2.15 & 2.15 & BCS & 3.44 & 3.44 \\ Growth scenario & 3\% & 7\% & 3\% & 7\% & 3\% & 3\% & BCL \\ National accounts adjustment & & & \checkmark & \checkmark & & & \\  \midrule
-Angola & 63.1 & 132.4 & 896.5 & 1283.4 & 6.0 & 20.7 & 15.2\\
-Bangladesh & 69.0 & $+\infty$ & 1461.6 & $+\infty$ & NA & 50.1 & 7.6\\
-Benin & 50.1 & 79.0 & 376.6 & 523.0 & 30.5 & 24.4 & 8.4\\
-Burkina Faso & 49.4 & 90.5 & 49.4 & 90.5 & 24.7 & 25.1 & 11.1\\
-Burundi & 3.4 & 8.6 & 3.4 & 8.6 & 2.5 & 2.5 & 2.3\\
-Cameroon & 53.8 & 97.0 & 326.9 & 476.0 & 17.3 & 29.5 & 14.2\\
-Chad & 16.4 & 34.2 & 16.4 & 34.2 & 10.1 & 6.9 & 4.7\\
-Democratic Republic of the Congo & 6.7 & 14.7 & 6.7 & 14.7 & NA & 3.2 & 2.0\\
-Ethiopia & 43.8 & 71.7 & 43.8 & 71.7 & 19.2 & 22.0 & 4.4\\
-Ghana & 47.8 & 85.1 & 1501.7 & 2067.0 & 30.1 & 26.3 & 9.8\\
-Guinea & 21.6 & 35.0 & 160.4 & 225.3 & 17.2 & 13.2 & 6.3\\
-Haiti & 18.5 & 39.5 & 593.3 & 895.7 & 4.5 & 7.9 & 4.9\\
-India & 56.1 & 79.1 & 1750.5 & 2378.6 & NA & 35.3 & 13.5\\
-Ivory Coast & 55.4 & 80.2 & 1127.2 & 1534.2 & NA & 32.5 & 13.6\\
-Kenya & 42.1 & 75.4 & 1291.1 & 1775.5 & 14.1 & 19.3 & 6.4\\
-Madagascar & 2.0 & 4.6 & 200.7 & 422.2 & 2.0 & 2.0 & 1.6\\
-Malawi & 3.6 & 9.1 & 7.6 & 44.4 & 8.2 & 2.5 & 2.1\\
-Mali & 33.8 & 55.6 & 33.8 & 55.6 & 27.1 & 16.9 & 9.5\\
-Mozambique & 21.0 & 59.5 & 61.9 & 166.8 & 28.9 & 4.5 & 2.9\\
-Nepal & 66.3 & $+\infty$ & 660.2 & $+\infty$ & 38.2 & 56.9 & 10.8\\
-Niger & 16.2 & 38.4 & 16.2 & 38.4 & 8.0 & 5.0 & 2.9\\
-Nigeria & 14.2 & 29.5 & 102.5 & 177.8 & 5.9 & 7.0 & 4.1\\
-Pakistan & 55.9 & $+\infty$ & 1875.4 & $+\infty$ & 20.1 & 36.3 & 11.5\\
-Papua New Guinea & 20.6 & 39.2 & 123.2 & 212.0 & NA & 11.1 & 3.6\\
-Rwanda & 32.0 & 74.1 & 451.2 & 664.8 & 7.2 & 10.9 & 3.1\\
-Senegal & 72.7 & 103.0 & 250.6 & 344.4 & 60.8 & 41.7 & 17.6\\
-South Sudan & 6.8 & 24.9 & 19.7 & 135.9 & NA & 3.3 & NA\\
-Sudan & 20.0 & 49.0 & 819.5 & 1148.3 & 4.3 & 6.7 & 7.9\\
-Tanzania & 23.7 & 57.8 & 378.8 & 567.6 & 9.6 & 7.5 & 3.3\\
-Uganda & 29.9 & 77.3 & 314.0 & 483.3 & 10.4 & 8.5 & 3.7\\
-Uzbekistan & 22.7 & 44.9 & 139.0 & 213.8 & 36.2 & 10.8 & NA\\
-Yemen & 60.2 & $+\infty$ & 237.9 & $+\infty$ & NA & 30.2 & 7.7\\
-Zambia & 11.8 & 27.5 & 30.0 & 91.8 & 3.7 & 4.6 & 3.0\\
-Zimbabwe & 40.6 & 85.3 & 133.1 & 235.7 & NA & 17.2 & NA\\
+\caption{\label{tab:cap}Antipoverty caps for major lower-income countries in 2030.}
+\makebox[\textwidth][c]{
+\begin{tabular}[t]{lrrrrrrrrr}
+\toprule Poverty line (\$/day) & 2.15 & 2.15 & 2.15 & 2.15 & 2.15 & 2.15 & BCS & 3.44 & 3.44 \\ Growth scenario & 3\% & 3\% & 7\% & 7\% & \multicolumn{2}{c}{Projection} & 3\% & 3\% & BCL \\ HFCE rescaling & & \checkmark & & \checkmark & & \checkmark & & & \\  \midrule
+World & 442.6 & 1785.2 & 618.7 & 2442.3 & 384.3 & 1741.9 & $+infty$ & 376.0 & 204.3\\
+Low-Income Countries & 32.5 & 231.0 & 187.7 & 564.0 & 18.6 & 127.3 & $+infty$ & 16.1 & 4.9\\
+Sub-Saharan Africa & 24.3 & 301.2 & 41.8 & 485.0 & 19.6 & 224.0 & $+infty$ & 10.4 & 6.6\\
+\midrule Angola & 63.1 & 896.5 & 132.4 & 1283.4 & 41.1 & 755.7 & 6.0 & 20.7 & 15.2\\
+Bangladesh & 69.0 & 1461.6 & $+infty$ & $+infty$ & 71.4 & 1506.2 & NA & 50.1 & 7.6\\
+Benin & 50.1 & 376.6 & 79.0 & 523.0 & 40.1 & 333.0 & 30.5 & 24.4 & 8.4\\
+Burkina Faso & 49.4 & 49.4 & 90.5 & 90.5 & 40.9 & 40.9 & 24.7 & 25.1 & 11.1\\
+Burundi & 3.4 & 3.4 & 8.6 & 8.6 & 2.1 & 2.1 & 2.5 & 2.5 & 2.3\\
+Cameroon & 53.8 & 326.9 & 97.0 & 476.0 & 40.4 & 275.0 & 17.3 & 29.5 & 14.2\\
+Chad & 16.4 & 16.4 & 34.2 & 34.2 & 12.4 & 12.4 & 10.1 & 6.9 & 4.7\\
+D.R. Congo & 6.7 & 6.7 & 14.7 & 14.7 & 5.6 & 5.6 & NA & 3.2 & 2.0\\
+Ethiopia & 43.8 & 43.8 & 71.7 & 71.7 & 51.2 & 51.2 & 19.2 & 22.0 & 4.4\\
+Ghana & 47.8 & 1501.7 & 85.1 & 2067.0 & 43.8 & 1440.7 & 30.1 & 26.3 & 9.8\\
+Guinea & 21.6 & 160.4 & 35.0 & 225.3 & 18.2 & 143.5 & 17.2 & 13.2 & 6.3\\
+Haiti & 18.5 & 593.3 & 39.5 & 895.7 & 12.1 & 466.8 & 4.5 & 7.9 & 4.9\\
+India & 56.1 & 1750.5 & 79.1 & 2378.6 & 58.3 & 1804.3 & NA & 35.3 & 13.5\\
+Ivory Coast & 55.4 & 1127.2 & 80.2 & 1534.2 & 48.5 & 1028.7 & NA & 32.5 & 13.6\\
+Kenya & 42.1 & 1291.1 & 75.4 & 1775.5 & 33.6 & 1174.5 & 14.1 & 19.3 & 6.4\\
+Madagascar & 2.0 & 200.7 & 4.6 & 422.2 & 1.8 & 125.5 & 2.0 & 2.0 & 1.6\\
+Malawi & 3.6 & 7.6 & 9.1 & 44.4 & 2.7 & 4.6 & 8.2 & 2.5 & 2.1\\
+Mali & 33.8 & 33.8 & 55.6 & 55.6 & 25.3 & 25.3 & 27.1 & 16.9 & 9.5\\
+Mozambique & 21.0 & 61.9 & 59.5 & 166.8 & 15.6 & 46.0 & 28.9 & 4.5 & 2.9\\
+Nepal & 66.3 & 660.2 & $+infty$ & $+infty$ & 63.5 & 635.2 & 38.2 & 56.9 & 10.8\\
+Niger & 16.2 & 16.2 & 38.4 & 38.4 & 11.3 & 11.3 & 8.0 & 5.0 & 2.9\\
+Nigeria & 14.2 & 102.5 & 29.5 & 177.8 & 11.1 & 79.9 & 5.9 & 7.0 & 4.1\\
+Pakistan & 55.9 & 1875.4 & $+infty$ & $+infty$ & 51.2 & 1740.1 & 20.1 & 36.3 & 11.5\\
+Papua New Guinea & 20.6 & 123.2 & 39.2 & 212.0 & 16.1 & 95.1 & NA & 11.1 & 3.6\\
+Rwanda & 32.0 & 451.2 & 74.1 & 664.8 & 32.3 & 452.6 & 7.2 & 10.9 & 3.1\\
+Senegal & 72.7 & 250.6 & 103.0 & 344.4 & 62.9 & 223.3 & 60.8 & 41.7 & 17.6\\
+South Sudan & 6.8 & 19.7 & 24.9 & 135.9 & NA & NA & NA & 3.3 & NA\\
+Sudan & 20.0 & 819.5 & 49.0 & 1148.3 & 11.5 & 661.9 & 4.3 & 6.7 & 7.9\\
+Tanzania & 23.7 & 378.8 & 57.8 & 567.6 & 19.4 & 345.9 & 9.6 & 7.5 & 3.3\\
+Uganda & 29.9 & 314.0 & 77.3 & 483.3 & 23.3 & 281.0 & 10.4 & 8.5 & 3.7\\
+Uzbekistan & 22.7 & 139.0 & 44.9 & 213.8 & 24.1 & 144.8 & 36.2 & 10.8 & NA\\
+Yemen & 60.2 & 237.9 & $+infty$ & $+infty$ & NA & NA & NA & 30.2 & 7.7\\
+Zambia & 11.8 & 30.0 & 27.5 & 91.8 & 9.3 & 22.5 & 3.7 & 4.6 & 3.0\\
+Zimbabwe & 40.6 & 133.1 & 85.3 & 235.7 & 26.7 & 83.7 & NA & 17.2 & NA\\
 \bottomrule
-\end{tabular}
+\end{tabular}}
 \end{table}
