--- a/tables/floor.tex
+++ b/tables/floor.tex
@@ -1,43 +1,46 @@
 \begin{table}[b]
 
 \caption[Income floor (in \$/day) financed by a 10\% tax above \$10/day.]{\label{tab:tax}Income floor (in \$/day) financed by a 10\% tax above \$10/day for major lower-income countries in 2030.}
-\centering
-\begin{tabular}[t]{lrrrrr}
-\toprule Growth scenario over 2022--2030 & 3\% & 3\% & 7\% & 7\% & \makecell{7\% since \\ 2015} \\ National accounts adjustment & & \checkmark & & \checkmark & \\  \midrule
-Angola & 2.1 & 3.2 & 3.1 & 4.6 & 7.8\\
-Bangladesh & 4.4 & 6.2 & 6.4 & 8.7 & 7.3\\
-Benin & 3.2 & 3.8 & 4.8 & 5.5 & 6.8\\
-Burkina Faso & 2.8 & 2.8 & 4.1 & 4.1 & 6.0\\
-Burundi & 0.9 & 0.9 & 1.3 & 1.3 & 2.8\\
-Cameroon & 3.1 & 3.5 & 4.5 & 5.1 & 7.7\\
-Chad & 1.8 & 1.8 & 2.8 & 2.8 & 7.1\\
-Democratic Republic of the Congo & 1.0 & 1.0 & 1.6 & 1.6 & 2.7\\
-Ethiopia & 3.1 & 3.1 & 4.7 & 4.7 & 5.8\\
-Ghana & 3.1 & 5.2 & 4.6 & 7.3 & 6.7\\
-Guinea & 3.0 & 3.4 & 4.7 & 5.1 & 6.1\\
-Haiti & 1.3 & 2.3 & 1.9 & 3.3 & 4.3\\
-India & 3.8 & 5.9 & 5.6 & 8.2 & 7.1\\
-Ivory Coast & 4.1 & 5.6 & 6.0 & 7.9 & 8.1\\
-Kenya & 2.8 & 4.5 & 4.1 & 6.3 & 6.1\\
-Madagascar & 0.5 & 1.3 & 0.9 & 1.8 & 1.7\\
-Malawi & 0.9 & 1.1 & 1.3 & 1.6 & 2.4\\
-Mali & 3.0 & 3.0 & 4.4 & 4.4 & 7.6\\
-Mozambique & 1.3 & 1.4 & 1.8 & 2.0 & 3.3\\
-Nepal & 5.8 & 6.7 & 8.4 & 9.5 & 11.5\\
-Niger & 1.7 & 1.7 & 2.5 & 2.5 & 3.9\\
-Nigeria & 1.8 & 2.2 & 2.8 & 3.2 & 6.0\\
-Pakistan & 3.9 & 6.1 & 5.8 & 8.5 & 8.3\\
-Papua New Guinea & 2.0 & 2.3 & 3.0 & 3.4 & 5.8\\
-Rwanda & 2.0 & 2.7 & 2.9 & 3.8 & 3.9\\
-Senegal & 4.1 & 4.4 & 6.0 & 6.3 & 8.6\\
-South Sudan & 0.9 & 1.2 & 2.0 & 2.3 & 2.2\\
-Sudan & 1.9 & 3.3 & 2.8 & 4.5 & 7.6\\
-Tanzania & 1.9 & 2.6 & 2.8 & 3.6 & 4.2\\
-Uganda & 1.8 & 2.4 & 2.7 & 3.4 & 4.4\\
-Uzbekistan & 2.2 & 2.6 & 3.4 & 3.8 & 4.7\\
-Yemen & 3.6 & 4.0 & 7.8 & 8.3 & 7.2\\
-Zambia & 1.0 & 1.2 & 1.5 & 1.7 & 2.8\\
-Zimbabwe & 2.1 & 2.3 & 3.1 & 3.3 & 5.9\\
+\makebox[\textwidth][c]{
+\begin{tabular}[t]{lrrrrrrr}
+\toprule Growth scenario over 2022--2030 & 3\% & 3\% & \multicolumn{2}{c}{Projection} & 7\% & 7\% & \makecell{7\% since \\ 2015} \\ HFCE rescaling & & \checkmark & & \checkmark & & \checkmark & \\  \midrule
+World & 8.6 & 10.3 & 8.4 & 10.1 & 12.1 & 14.4 & 16.7\\
+Low-Income Countries & 2.1 & 2.4 & 1.6 & 1.9 & 3.6 & 4.0 & 4.9\\
+Sub-Saharan Africa & 1.9 & 2.4 & 1.7 & 2.2 & 2.8 & 3.4 & 5.0\\
+\midrule Angola & 2.1 & 3.2 & 1.7 & 2.8 & 3.1 & 4.6 & 7.8\\
+Bangladesh & 4.4 & 6.2 & 4.6 & 6.4 & 6.4 & 8.7 & 7.3\\
+Benin & 3.2 & 3.8 & 2.8 & 3.4 & 4.8 & 5.5 & 6.8\\
+Burkina Faso & 2.8 & 2.8 & 2.6 & 2.6 & 4.1 & 4.1 & 6.0\\
+Burundi & 0.9 & 0.9 & 0.7 & 0.7 & 1.3 & 1.3 & 2.8\\
+Cameroon & 3.1 & 3.5 & 2.6 & 3.0 & 4.5 & 5.1 & 7.7\\
+Chad & 1.8 & 1.8 & 1.6 & 1.6 & 2.8 & 2.8 & 7.1\\
+D.R. Congo & 1.0 & 1.0 & 0.9 & 0.9 & 1.6 & 1.6 & 2.7\\
+Ethiopia & 3.1 & 3.1 & 3.4 & 3.4 & 4.7 & 4.7 & 5.8\\
+Ghana & 3.1 & 5.2 & 2.9 & 5.0 & 4.6 & 7.3 & 6.7\\
+Guinea & 3.0 & 3.4 & 2.7 & 3.1 & 4.7 & 5.1 & 6.1\\
+Haiti & 1.3 & 2.3 & 1.0 & 2.0 & 1.9 & 3.3 & 4.3\\
+India & 3.8 & 5.9 & 3.9 & 6.1 & 5.6 & 8.2 & 7.1\\
+Ivory Coast & 4.1 & 5.6 & 3.6 & 5.1 & 6.0 & 7.9 & 8.1\\
+Kenya & 2.8 & 4.5 & 2.5 & 4.1 & 4.1 & 6.3 & 6.1\\
+Madagascar & 0.5 & 1.3 & 0.4 & 1.2 & 0.9 & 1.8 & 1.7\\
+Malawi & 0.9 & 1.1 & 0.8 & 1.0 & 1.3 & 1.6 & 2.4\\
+Mali & 3.0 & 3.0 & 2.5 & 2.5 & 4.4 & 4.4 & 7.6\\
+Mozambique & 1.3 & 1.4 & 1.2 & 1.3 & 1.8 & 2.0 & 3.3\\
+Nepal & 5.8 & 6.7 & 5.5 & 6.4 & 8.4 & 9.5 & 11.5\\
+Niger & 1.7 & 1.7 & 1.5 & 1.5 & 2.5 & 2.5 & 3.9\\
+Nigeria & 1.8 & 2.2 & 1.6 & 1.9 & 2.8 & 3.2 & 6.0\\
+Pakistan & 3.9 & 6.1 & 3.6 & 5.7 & 5.8 & 8.5 & 8.3\\
+Papua New Guinea & 2.0 & 2.3 & 1.7 & 2.0 & 3.0 & 3.4 & 5.8\\
+Rwanda & 2.0 & 2.7 & 2.0 & 2.7 & 2.9 & 3.8 & 3.9\\
+Senegal & 4.1 & 4.4 & 3.6 & 3.9 & 6.0 & 6.3 & 8.6\\
+South Sudan & 0.9 & 1.2 & NA & NA & 2.0 & 2.3 & 2.2\\
+Sudan & 1.9 & 3.3 & 1.5 & 2.7 & 2.8 & 4.5 & 7.6\\
+Tanzania & 1.9 & 2.6 & 1.8 & 2.4 & 2.8 & 3.6 & 4.2\\
+Uganda & 1.8 & 2.4 & 1.7 & 2.2 & 2.7 & 3.4 & 4.4\\
+Uzbekistan & 2.2 & 2.6 & 2.3 & 2.7 & 3.4 & 3.8 & 4.7\\
+Yemen & 3.6 & 4.0 & NA & NA & 7.8 & 8.3 & 7.2\\
+Zambia & 1.0 & 1.2 & 0.9 & 1.0 & 1.5 & 1.7 & 2.8\\
+Zimbabwe & 2.1 & 2.3 & 1.7 & 1.9 & 3.1 & 3.3 & 5.9\\
 \bottomrule
-\end{tabular}
+\end{tabular}}
 \end{table}
