--- a/tables/tax.tex
+++ b/tables/tax.tex
@@ -1,43 +1,46 @@
 \begin{table}[b]
 
-\caption{\label{tab:tax}Anti-extreme-poverty taxes for major lower-income countries in 2030.}
-\centering
-\begin{tabular}[t]{lrrrrrrr}
-\toprule Taxation threshold (\$/day) & 6.85 & 18.15 & 18.15 & 18.15 & 6.85 & 6.85 & 18.15 \\ Growth scenario & 3\% & 7\% & 3\% & Trend & 7\% & 3\% & 7\% \\ National accounts adjustment & & & & & & \checkmark & \checkmark \\  \midrule
-Angola & 11.4 & 9.1 & 28.2 & 62.4 & 3.8 & 3.6 & 1.8\\
-Bangladesh & 0.1 & 0.0 & 0.6 & 0.0 & 0.0 & 0.0 & 0.0\\
-Benin & 1.5 & 0.7 & 6.8 & 12.8 & 0.2 & 0.8 & 0.2\\
-Burkina Faso & 3.2 & 1.3 & 9.7 & 11.1 & 0.5 & 3.2 & 1.3\\
-Burundi & 285.8 & 449.4 & $>$ 10k & $>$ 10k & 69.5 & 285.8 & 449.4\\
-Cameroon & 3.1 & 2.0 & 9.9 & 19.6 & 0.8 & 2.1 & 1.0\\
-Chad & 19.3 & 16.1 & 130.6 & 652.3 & 3.2 & 19.3 & 16.1\\
-Democratic Republic of the Congo & 103.1 & 155.2 & 743.7 & 2482.0 & 26.8 & 103.1 & 155.2\\
-Ethiopia & 2.2 & 1.1 & 10.3 & 2.0 & 0.3 & 2.2 & 1.1\\
-Ghana & 3.6 & 3.5 & 13.9 & 14.3 & 1.1 & 1.0 & 0.5\\
-Guinea & 1.8 & 2.1 & 36.0 & 10.4 & 0.2 & 1.0 & 0.4\\
-Haiti & 32.7 & 34.3 & 97.3 & 222.9 & 12.5 & 8.3 & 4.9\\
-India & 0.5 & 0.1 & 1.6 & 0.4 & 0.0 & 0.1 & 0.0\\
-Ivory Coast & 0.4 & 0.2 & 2.0 & 1.2 & 0.1 & 0.1 & 0.0\\
-Kenya & 3.8 & 2.8 & 15.9 & 19.5 & 0.8 & 0.8 & 0.3\\
-Madagascar & 620.6 & 2019.5 & $>$ 10k & $>$ 10k & 179.7 & 32.3 & 16.4\\
-Malawi & 260.0 & 354.8 & $>$ 10k & $>$ 10k & 63.8 & 93.7 & 49.7\\
-Mali & 1.9 & 0.9 & 12.0 & 21.2 & 0.2 & 1.9 & 0.9\\
-Mozambique & 45.8 & 32.0 & 89.2 & 151.8 & 16.6 & 31.4 & 18.5\\
-Nepal & 0.0 & 0.0 & 0.1 & 0.0 & 0.0 & 0.0 & 0.0\\
-Niger & 28.5 & 17.6 & 123.5 & 222.1 & 4.7 & 28.5 & 17.6\\
-Nigeria & 19.5 & 22.7 & 187.6 & 2696.4 & 3.0 & 9.8 & 4.2\\
-Pakistan & 0.0 & 0.0 & 0.3 & 0.1 & 0.0 & 0.0 & 0.0\\
-Papua New Guinea & 13.2 & 15.2 & 75.0 & 136.5 & 3.5 & 8.4 & 5.7\\
-Rwanda & 12.9 & 8.2 & 41.2 & 20.8 & 2.8 & 4.3 & 1.5\\
-Senegal & 0.4 & 0.2 & 1.5 & 1.2 & 0.1 & 0.3 & 0.1\\
-South Sudan & 101.6 & 52.3 & 603.5 & $>$ 10k & 11.7 & 49.8 & 16.1\\
-Sudan & 17.8 & 12.4 & 73.0 & 305.2 & 2.8 & 2.0 & 0.6\\
-Tanzania & 17.7 & 10.0 & 62.2 & 68.1 & 3.0 & 5.1 & 1.5\\
-Uganda & 18.3 & 12.1 & 52.4 & 81.4 & 4.1 & 6.8 & 2.7\\
-Uzbekistan & 8.5 & 8.1 & 51.7 & 31.7 & 1.6 & 4.8 & 2.4\\
-Yemen & 0.9 & 0.0 & 3.8 & 86.1 & 0.0 & 0.6 & 0.0\\
-Zambia & 58.2 & 60.1 & 166.2 & 360.4 & 23.7 & 39.6 & 31.4\\
-Zimbabwe & 10.5 & 6.1 & 27.2 & 76.7 & 2.6 & 7.8 & 3.7\\
+\caption[Anti-extrme-poverty taxes for major lower-income countries in 2030.]{\label{tab:tax}Antipoverty tax required to eliminate extreme poverty (at \$2.15/day) in major lower-income countries in 2030 (marginal rate in \%).}
+\makebox[\textwidth][c]{
+\begin{tabular}[t]{lrrrrrrrrr}
+\toprule Taxation threshold (\$/day) & 6.85 & 18.15 & 18.15 & 18.15 & 18.15 & 6.85 & 6.85 & 6.85 & 18.15 \\ Growth scenario & 3\% & 7\% & 3\% & Trend & \multicolumn{2}{c}{Projection} & 7\% & 3\% & 7\% \\ HFCE rescaling & & & & & & & & \checkmark & \checkmark \\  \midrule
+World & 0.2 & 0.1 & 0.3 & 0.4 & 0.3 & 0.2 & 0.1 & 0.1 & 0.1\\
+Low-Income Countries & 11.1 & 4.0 & 33.2 & 76.6 & 95.6 & 24.2 & 2.2 & 7.1 & 2.5\\
+Sub-Saharan Africa & 15.9 & 14.4 & 59.8 & 89.3 & 84.6 & 21.5 & 4.2 & 7.4 & 3.8\\
+\midrule Angola & 11.4 & 9.1 & 28.2 & 62.4 & 44.3 & 18.0 & 3.8 & 3.6 & 1.8\\
+Bangladesh & 0.1 & 0.0 & 0.6 & 0.0 & 0.4 & 0.1 & 0.0 & 0.0 & 0.0\\
+Benin & 1.5 & 0.7 & 6.8 & 12.8 & 13.8 & 3.0 & 0.2 & 0.8 & 0.2\\
+Burkina Faso & 3.2 & 1.3 & 9.7 & 11.1 & 14.7 & 4.7 & 0.5 & 3.2 & 1.3\\
+Burundi & 285.8 & 449.4 & $>$ 10k & $>$ 10k & $>$ 10k & 600.7 & 69.5 & 285.8 & 449.4\\
+Cameroon & 3.1 & 2.0 & 9.9 & 19.6 & 17.9 & 5.3 & 0.8 & 2.1 & 1.0\\
+Chad & 19.3 & 16.1 & 130.6 & 652.3 & 246.0 & 33.9 & 3.2 & 19.3 & 16.1\\
+D.R. Congo & 103.1 & 155.2 & 743.7 & 2482.0 & 1239.1 & 140.8 & 26.8 & 103.1 & 155.2\\
+Ethiopia & 2.2 & 1.1 & 10.3 & 2.0 & 5.9 & 1.3 & 0.3 & 2.2 & 1.1\\
+Ghana & 3.6 & 3.5 & 13.9 & 14.3 & 16.6 & 4.2 & 1.1 & 1.0 & 0.5\\
+Guinea & 1.8 & 2.1 & 36.0 & 10.4 & 85.3 & 3.3 & 0.2 & 1.0 & 0.4\\
+Haiti & 32.7 & 34.3 & 97.3 & 222.9 & 164.6 & 52.9 & 12.5 & 8.3 & 4.9\\
+India & 0.5 & 0.1 & 1.6 & 0.4 & 1.2 & 0.4 & 0.0 & 0.1 & 0.0\\
+Ivory Coast & 0.4 & 0.2 & 2.0 & 1.2 & 3.9 & 0.8 & 0.1 & 0.1 & 0.0\\
+Kenya & 3.8 & 2.8 & 15.9 & 19.5 & 25.9 & 5.9 & 0.8 & 0.8 & 0.3\\
+Madagascar & 620.6 & 2019.5 & $>$ 10k & $>$ 10k & $>$ 10k & 1072.2 & 179.7 & 32.3 & 16.4\\
+Malawi & 260.0 & 354.8 & $>$ 10k & $>$ 10k & $>$ 10k & 397.8 & 63.8 & 93.7 & 49.7\\
+Mali & 1.9 & 0.9 & 12.0 & 21.2 & 30.9 & 4.3 & 0.2 & 1.9 & 0.9\\
+Mozambique & 45.8 & 32.0 & 89.2 & 151.8 & 109.9 & 56.1 & 16.6 & 31.4 & 18.5\\
+Nepal & 0.0 & 0.0 & 0.1 & 0.0 & 0.2 & 0.0 & 0.0 & 0.0 & 0.0\\
+Niger & 28.5 & 17.6 & 123.5 & 222.1 & 228.3 & 50.2 & 4.7 & 28.5 & 17.6\\
+Nigeria & 19.5 & 22.7 & 187.6 & 2696.4 & 387.0 & 33.7 & 3.0 & 9.8 & 4.2\\
+Pakistan & 0.0 & 0.0 & 0.3 & 0.1 & 1.0 & 0.2 & 0.0 & 0.0 & 0.0\\
+Papua New Guinea & 13.2 & 15.2 & 75.0 & 136.5 & 128.1 & 20.9 & 3.5 & 8.4 & 5.7\\
+Rwanda & 12.9 & 8.2 & 41.2 & 20.8 & 40.7 & 12.7 & 2.8 & 4.3 & 1.5\\
+Senegal & 0.4 & 0.2 & 1.5 & 1.2 & 3.1 & 0.8 & 0.1 & 0.3 & 0.1\\
+South Sudan & 101.6 & 52.3 & 603.5 & $>$ 10k & NA & NA & 11.7 & 49.8 & 16.1\\
+Sudan & 17.8 & 12.4 & 73.0 & 305.2 & 197.9 & 46.4 & 2.8 & 2.0 & 0.6\\
+Tanzania & 17.7 & 10.0 & 62.2 & 68.1 & 86.3 & 23.7 & 3.0 & 5.1 & 1.5\\
+Uganda & 18.3 & 12.1 & 52.4 & 81.4 & 69.8 & 24.4 & 4.1 & 6.8 & 2.7\\
+Uzbekistan & 8.5 & 8.1 & 51.7 & 31.7 & 44.2 & 7.5 & 1.6 & 4.8 & 2.4\\
+Yemen & 0.9 & 0.0 & 3.8 & 86.1 & NA & NA & 0.0 & 0.6 & 0.0\\
+Zambia & 58.2 & 60.1 & 166.2 & 360.4 & 216.7 & 74.3 & 23.7 & 39.6 & 31.4\\
+Zimbabwe & 10.5 & 6.1 & 27.2 & 76.7 & 56.9 & 20.5 & 2.6 & 7.8 & 3.7\\
 \bottomrule
-\end{tabular}
+\end{tabular}}
 \end{table}
