--- a/tables/gain.tex
+++ b/tables/gain.tex
@@ -1,46 +1,53 @@
 \begin{table}[b]
 
-\caption[Net gain per country of a global antipoverty tax.]{\label{tab:tax}Net gain per country of a global antipoverty tax, for most populous countries in 2030 after 3\% growth.}
+\caption[Net gain per country of global antipoverty taxes.]{\label{tab:gain}Net gain per country of a global antipoverty tax above \$100/day, for most populous countries in 2030 after 3\% growth.}
 \centering
 \begin{tabular}[t]{lrrrrrr}
-\toprule Taxation threshold & \multicolumn{2}{c}{\$100/day}  & \multicolumn{2}{c}{\$100,000/year} & \multicolumn{2}{c}{\$100,000/year} \\  Tax rate & 1.18\% & 1.18\% & 0.5\% & 0.5\% & 15\% & 15\%  \\ National accounts adjustment &  & \checkmark &  & \checkmark & & \checkmark \\  \midrule
-Algeria & 0.00 & -0.27 & 0.00 & -0.06 & 0.00 & 0.04\\
-Angola & 3.79 & 5.80 & 0.39 & 2.27 & 6.64 & 24.81\\
-Argentina & -0.05 & -0.36 & 0.00 & -0.14 & 0.03 & -3.81\\
-Bangladesh & 0.03 & -0.22 & 0.00 & -0.14 & 0.16 & 4.00\\
-Brazil & 0.00 & -0.04 & 0.01 & -0.01 & 0.20 & -1.09\\
-Canada & -0.19 & -0.29 & -0.01 & -0.05 & -0.21 & -1.49\\
-China & -0.01 & -0.16 & 0.00 & -0.03 & 0.00 & -0.59\\
-Colombia & 0.15 & -0.29 & 0.05 & -0.10 & 0.36 & -4.36\\
-D.R. Congo & 11.37 & 31.62 & 1.04 & 12.27 & 19.84 & 123.16\\
-Egypt & 0.00 & -0.80 & 0.00 & -0.33 & 0.05 & -7.14\\
-Ethiopia & 0.51 & 2.87 & 0.00 & 0.58 & 1.34 & 29.05\\
-France & -0.16 & -0.20 & -0.01 & -0.03 & -0.29 & -0.80\\
-Germany & -0.19 & -0.28 & -0.01 & -0.06 & -0.42 & -1.66\\
-India & 0.13 & 0.01 & 0.00 & -0.13 & 0.46 & 5.01\\
-Indonesia & 0.00 & -0.48 & 0.00 & -0.22 & 0.07 & -2.12\\
-Iraq & 0.00 & -0.29 & 0.00 & -0.08 & 0.00 & -1.33\\
-Italy & -0.14 & -0.25 & -0.01 & -0.05 & -0.16 & -1.68\\
-Japan & -0.14 & -0.25 & -0.01 & -0.06 & -0.23 & -1.75\\
-Kenya & 1.03 & 1.88 & 0.04 & 0.42 & 2.36 & 13.44\\
-Mexico & 0.01 & -0.56 & 0.00 & -0.23 & 0.11 & -6.15\\
-Morocco & -0.01 & -0.02 & 0.00 & 0.00 & 0.03 & 2.46\\
-Myanmar & 0.03 & 0.34 & 0.00 & 0.03 & 0.12 & 12.01\\
-Nigeria & 2.46 & 9.35 & 0.06 & 2.44 & 5.48 & 57.28\\
-Pakistan & 0.01 & -0.35 & 0.00 & -0.20 & 0.14 & 3.59\\
-Philippines & 0.05 & -0.36 & 0.00 & -0.19 & 0.17 & -1.40\\
-Poland & -0.04 & -0.56 & 0.00 & -0.22 & 0.00 & -6.20\\
-South Korea & -0.10 & -0.16 & 0.00 & -0.03 & 0.00 & -0.75\\
-Spain & -0.12 & -0.16 & 0.00 & -0.02 & -0.02 & -0.72\\
-Sudan & 2.18 & 5.08 & 0.05 & 1.17 & 5.23 & 33.81\\
-Tanzania & 3.20 & 9.50 & 0.05 & 2.51 & 7.31 & 52.46\\
-Thailand & -0.01 & -0.36 & 0.00 & -0.12 & 0.00 & -3.33\\
-Turkey & -0.06 & -0.49 & 0.00 & -0.19 & 0.00 & -5.12\\
-Uganda & 3.70 & 10.20 & 0.15 & 3.06 & 7.66 & 53.93\\
-UK & -0.17 & -0.29 & -0.01 & -0.07 & -0.18 & -1.79\\
-Ukraine & 0.00 & -0.39 & 0.00 & -0.13 & 0.00 & -3.41\\
-USA & -0.41 & -0.57 & -0.04 & -0.13 & -1.06 & -3.61\\
-Vietnam & -0.01 & 0.00 & 0.00 & 0.00 & 0.00 & 0.76\\
+\toprule Tax rate & 1.2\% & 1.2\% & 0.3\% & 0.3\% & 10\% & 10\%  \\ 
+HFCE rescaling &  & \checkmark &  & \checkmark & & \checkmark \\ 
+ \midrule
+Revenues (\% global income) & 0.15 & 0.41 & 0.04 & 0.10 & 1.20 & 3.42\\
+International transfers & 0.14 & 0.31 & 0.04 & 0.09 & 1.17 & 2.32\\
+Income floor (\$/day) & 2.17 & 3.31 & 1.44 & 2.14 & 4.29 & 7.00\\
+Gini & 0.62 & 0.71 & 0.62 & 0.71 & 0.60 & 0.65\\
+\midrule Low-Income Countries & 3.28 & 8.21 & 0.94 & 2.47 & 18.87 & 42.83\\
+Sub-Saharan Africa & 3.55 & 9.40 & 0.94 & 2.74 & 21.70 & 48.17\\
+\midrule Algeria & 0.00 & -0.27 & 0.00 & -0.07 & 0.04 & -0.41\\
+Angola & 3.84 & 5.87 & 1.19 & 2.03 & 19.27 & 24.99\\
+Argentina & -0.05 & -0.37 & -0.01 & -0.09 & -0.40 & -3.07\\
+Bangladesh & 0.03 & -0.22 & 0.00 & -0.12 & 2.47 & 4.62\\
+Brazil & 0.00 & -0.04 & 0.00 & 0.00 & -0.26 & -0.96\\
+Canada & -0.20 & -0.29 & -0.05 & -0.07 & -1.65 & -2.42\\
+China & -0.01 & -0.17 & 0.00 & -0.04 & -0.09 & -0.97\\
+Colombia & 0.15 & -0.30 & 0.08 & -0.04 & 0.50 & -2.96\\
+D.R. Congo & 11.53 & 32.00 & 3.45 & 11.05 & 54.50 & 126.84\\
+Egypt & 0.00 & -0.81 & 0.00 & -0.21 & 0.78 & -4.83\\
+Ethiopia & 0.52 & 2.92 & 0.05 & 0.48 & 7.27 & 30.50\\
+France & -0.16 & -0.20 & -0.04 & -0.05 & -1.36 & -1.69\\
+Germany & -0.19 & -0.28 & -0.05 & -0.07 & -1.60 & -2.36\\
+India & 0.13 & 0.02 & 0.00 & -0.10 & 4.62 & 6.07\\
+Indonesia & 0.00 & -0.49 & 0.00 & -0.16 & 1.42 & -0.82\\
+Iraq & 0.00 & -0.30 & 0.00 & -0.07 & 0.07 & -1.52\\
+Italy & -0.15 & -0.25 & -0.04 & -0.06 & -1.30 & -2.25\\
+Japan & -0.14 & -0.25 & -0.04 & -0.07 & -1.15 & -2.12\\
+Kenya & 1.05 & 1.92 & 0.19 & 0.36 & 11.05 & 14.07\\
+Mexico & 0.01 & -0.57 & 0.00 & -0.14 & 0.12 & -4.45\\
+Morocco & -0.01 & -0.02 & 0.00 & -0.03 & 0.30 & 1.76\\
+Mozambique & 12.59 & 28.74 & 4.08 & 10.77 & 52.87 & 103.65\\
+Myanmar & 0.03 & 0.35 & 0.00 & 0.01 & 1.93 & 12.30\\
+Nigeria & 2.51 & 9.51 & 0.39 & 2.10 & 22.09 & 59.44\\
+Pakistan & 0.01 & -0.35 & 0.00 & -0.16 & 3.38 & 4.76\\
+Philippines & 0.05 & -0.36 & 0.00 & -0.13 & 1.70 & -0.24\\
+South Korea & -0.10 & -0.16 & -0.02 & -0.04 & -0.82 & -1.30\\
+Spain & -0.12 & -0.16 & -0.03 & -0.04 & -1.03 & -1.48\\
+Sudan & 2.23 & 5.17 & 0.33 & 0.95 & 23.73 & 33.87\\
+Tanzania & 3.27 & 9.65 & 0.45 & 2.08 & 28.28 & 52.23\\
+Thailand & -0.01 & -0.37 & 0.00 & -0.09 & -0.10 & -2.88\\
+Turkey & -0.06 & -0.50 & -0.02 & -0.13 & -0.51 & -4.04\\
+Uganda & 3.77 & 10.36 & 0.75 & 2.62 & 27.30 & 54.13\\
+UK & -0.18 & -0.30 & -0.04 & -0.07 & -1.48 & -2.46\\
+USA & -0.42 & -0.58 & -0.11 & -0.14 & -3.51 & -4.78\\
+Vietnam & -0.01 & 0.00 & 0.00 & -0.01 & -0.01 & 0.59\\
 \bottomrule
 \end{tabular}
 \end{table}
