--- a/tables/income.tex
+++ b/tables/income.tex
@@ -1,6 +1,6 @@
 \begin{table}[b]
 
-\caption[Mean income in different scenarios, survey years and HFCE rescaling factor.]{\label{tab:tax}Mean income for major countries in various years and growth scenarios, survey years and factor used to rescale incomes to national accounts (in countries with HFCE to survey ratio above 1).}
+\caption[Mean income in different scenarios, survey years and HFCE rescaling factor.]{\label{tab:tax}Mean income in major lower-income countries in various years and growth scenarios, survey years and factor used to rescale incomes to national accounts (in countries with HFCE to survey ratio above 1).}
 \makebox[\textwidth][c]{
 \begin{tabular}[t]{lccccccccc}
 \toprule  & Year & \multicolumn{6}{c}{Mean consumption/income (in \$/day)} & BCL & HFCE to  \\ 
@@ -10,43 +10,40 @@
 World & 2018 & 17.2 & 18.6 & 23.6 & 32.3 & 22.9 & 23.4 & 2009 & 1.42\\
 Low-Income Countries & 2015 & 3.9 & 4.1 & 5.7 & 9.2 & 4.7 & 5.1 & 2009 & 1.12\\
 Sub-Saharan Africa & 2016 & 4.2 & 4.3 & 5.5 & 7.4 & 5.1 & 5.0 & 2009 & 1.34\\
-\midrule Algeria & 2011 & 9.2 & 9.3 & 11.8 & 16.0 & 10.4 & 9.4 & 1995 & 1.36\\
-Angola & 2018 & 5.5 & 4.7 & 6.0 & 8.1 & 5.2 & 4.7 & 2009 & 1.71\\
-Argentina & 2021 & 24.8 & 25.8 & 32.7 & 44.4 & 29.8 & 25.8 & 2010 & 1.43\\
+\midrule Angola & 2018 & 5.5 & 4.7 & 6.0 & 8.1 & 5.2 & 4.7 & 2009 & 1.71\\
 Bangladesh & 2016 & 4.5 & 6.1 & 7.7 & 10.5 & 8.0 & 9.6 & 2010 & 1.90\\
-Brazil & 2021 & 19.2 & 19.6 & 24.9 & 33.8 & 22.2 & 19.6 & 2009 & 1.26\\
-Canada & 2018 & 65.7 & 65.7 & 83.3 & 112.9 & 73.2 & 69.3 & NA & 1.10\\
-China & 2019 & 14.9 & 17.0 & 21.5 & 29.1 & 25.8 & 27.4 & 2009 & 1.15\\
-Colombia & 2021 & 14.2 & 15.1 & 19.1 & 26.0 & 17.9 & 16.3 & 2010 & 1.89\\
+Benin & 2018 & 4.7 & 5.3 & 6.7 & 9.0 & 6.0 & 6.1 & 2003 & 1.25\\
+Burkina Faso & 2018 & 5.0 & 5.2 & 6.6 & 9.0 & 6.2 & 6.5 & 2009 & 0.75\\
+Burundi & 2013 & 2.3 & 2.0 & 2.5 & 3.4 & 2.1 & 2.0 & 2006 & 0.75\\
+Cameroon & 2014 & 5.8 & 6.1 & 7.7 & 10.5 & 6.8 & 6.7 & 2007 & 1.18\\
+Chad & 2018 & 3.8 & 3.4 & 4.4 & 5.9 & 3.9 & 3.4 & 2003 & 0.92\\
 D.R. Congo & 2012 & 2.0 & 2.6 & 3.2 & 4.4 & 3.0 & 2.8 & 2005 & 0.91\\
-Egypt & 2019 & 6.8 & 7.3 & 9.3 & 12.6 & 8.6 & 9.1 & 2008 & 3.64\\
 Ethiopia & 2015 & 3.7 & 5.1 & 6.4 & 8.7 & 7.0 & 8.1 & 2011 & 0.91\\
-France & 2020 & 57.4 & 62.5 & 79.2 & 107.5 & 69.6 & 69.4 & NA & 1.04\\
-Germany & 2019 & 65.9 & 65.5 & 83.0 & 112.5 & 73.7 & 71.8 & NA & 1.10\\
+Ghana & 2016 & 5.1 & 6.0 & 7.6 & 10.3 & 7.3 & 7.6 & 2006 & 1.96\\
+Guinea & 2018 & 4.4 & 4.8 & 6.1 & 8.3 & 5.6 & 6.9 & 2007 & 1.12\\
+Haiti & 2012 & 3.9 & 3.6 & 4.5 & 6.2 & 3.9 & 3.6 & 2001 & 1.73\\
 India & 2019 & 5.3 & 5.6 & 7.1 & 9.7 & 7.3 & 8.6 & 2010 & 2.19\\
-Indonesia & 2022 & 7.9 & 7.9 & 10.0 & 13.6 & 9.8 & 10.8 & NA & 2.21\\
-Iraq & 2012 & 11.3 & 11.2 & 14.2 & 19.3 & 12.6 & 13.5 & 2007 & 1.36\\
-Italy & 2020 & 49.8 & 55.7 & 70.6 & 95.8 & 60.9 & 62.2 & NA & 1.13\\
-Japan & 2013 & 49.8 & 52.4 & 66.3 & 90.0 & 58.3 & 56.5 & NA & 1.13\\
+Ivory Coast & 2018 & 5.7 & 6.4 & 8.1 & 10.9 & 7.4 & 8.6 & 2008 & 1.67\\
 Kenya & 2015 & 4.2 & 5.0 & 6.3 & 8.6 & 5.8 & 6.1 & 2005 & 1.99\\
-Mexico & 2020 & 14.0 & 14.9 & 18.9 & 25.6 & 16.6 & 16.1 & 2010 & 2.17\\
-Morocco & 2013 & 10.6 & 11.6 & 14.7 & 19.9 & 13.5 & 13.5 & 2007 & 1.09\\
-Myanmar & 2017 & 6.6 & 6.3 & 8.0 & 10.8 & 8.8 & 9.8 & NA & NA\\
+Madagascar & 2012 & 1.6 & 1.6 & 2.0 & 2.7 & 1.8 & 1.7 & 2010 & 2.04\\
+Malawi & 2019 & 2.1 & 2.0 & 2.5 & 3.4 & 2.3 & 2.2 & 2010 & NA\\
+Mali & 2018 & 5.0 & 4.9 & 6.2 & 8.3 & 5.4 & 5.7 & 2010 & 0.94\\
+Mozambique & 2014 & 2.9 & 2.9 & 3.7 & 5.0 & 3.4 & 3.1 & 2008 & NA\\
+Nepal & 2010 & 5.2 & 7.7 & 9.8 & 13.3 & 9.4 & 11.0 & 2010 & 1.30\\
+Niger & 2018 & 2.9 & 3.0 & 3.9 & 5.2 & 3.5 & 3.5 & 2008 & 0.86\\
 Nigeria & 2018 & 3.7 & 3.6 & 4.5 & 6.1 & 4.1 & 3.6 & 2011 & NA\\
 Pakistan & 2018 & 5.0 & 5.3 & 6.7 & 9.1 & 6.2 & 6.8 & 2008 & 2.35\\
-Philippines & 2021 & 7.7 & 8.2 & 10.3 & 14.0 & 9.9 & 11.8 & 2009 & 2.07\\
-Poland & 2019 & 26.3 & 29.2 & 37.0 & 50.2 & 36.6 & 41.9 & 2011 & 1.84\\
-South Korea & 2016 & 43.2 & 49.3 & 62.5 & 84.8 & 59.1 & 59.7 & NA & 1.06\\
-Spain & 2020 & 47.0 & 52.0 & 65.9 & 89.4 & 57.6 & 63.6 & NA & 1.06\\
+Papua New Guinea & 2009 & 3.5 & 4.3 & 5.4 & 7.3 & 4.8 & 4.8 & 1996 & NA\\
+Rwanda & 2016 & 3.1 & 3.8 & 4.8 & 6.6 & 4.9 & 5.5 & 2011 & 1.45\\
+Senegal & 2018 & 6.0 & 6.3 & 8.0 & 10.8 & 7.2 & 8.2 & 2011 & 1.11\\
+South Sudan & 2016 & 2.2 & 2.2 & 3.3 & 5.5 & NA & 2.2 & NA & NA\\
 Sudan & 2014 & 4.6 & 3.4 & 4.3 & 5.9 & 3.6 & 3.4 & 2009 & 1.94\\
 Tanzania & 2018 & 3.3 & 3.4 & 4.4 & 5.9 & 4.1 & 4.3 & 2007 & 1.43\\
-Thailand & 2021 & 16.6 & 17.0 & 21.6 & 29.3 & 20.1 & 21.6 & 2010 & 1.42\\
-Turkey & 2019 & 22.2 & 26.0 & 33.0 & 44.7 & 32.7 & 32.3 & 2010 & 1.62\\
 Uganda & 2019 & 3.5 & 3.6 & 4.5 & 6.1 & 4.2 & 4.1 & 2009 & 1.33\\
-UK & 2020 & 54.9 & 61.6 & 78.0 & 105.8 & 68.7 & 68.7 & NA & 1.13\\
-Ukraine & 2020 & 14.3 & 12.4 & 15.7 & 21.3 & 13.9 & 13.1 & 2010 & 1.54\\
-USA & 2020 & 88.0 & 94.7 & 119.9 & 162.6 & 107.1 & 108.7 & NA & 1.25\\
-Vietnam & 2020 & 15.0 & 16.4 & 20.8 & 28.2 & 21.7 & 26.3 & 2008 & 1.01\\
+Uzbekistan & 2003 & 1.6 & 4.0 & 5.1 & 6.9 & 5.2 & 5.5 & NA & NA\\
+Yemen & 2014 & 4.5 & 4.5 & 7.2 & 13.3 & NA & 4.5 & 2005 & NA\\
+Zambia & 2015 & 3.0 & 3.0 & 3.7 & 5.1 & 3.4 & 3.0 & 2010 & NA\\
+Zimbabwe & 2019 & 4.5 & 4.4 & 5.5 & 7.5 & 4.7 & 4.4 & NA & 1.10\\
 \bottomrule
 \end{tabular}}
 \end{table}
