app figures, WP version

--- a/paper/poverty.bib
+++ b/paper/poverty.bib
@@ -316,17 +316,6 @@
 }
 
 @techreport{gradin_wiid_2021-1,
-  title = {{{WIID Companion}} ({{March}} 2021): Integrated and Standardized Series},
-  shorttitle = {{{WIID Companion}} ({{March}} 2021)},
-  author = {Grad{\'i}n, Carlos},
-  year = {2021},
-  month = mar,
-  institution = {{UNU-WIDER}},
-  doi = {10.35188/UNU-WIDER/WTN/2021-5},
-  url = {https://www.wider.unu.edu/node/238515}
-}
-
-@techreport{gradin_wiid_2021-2,
   title = {{{WIID Companion}} ({{March}} 2021): Data Selection},
   shorttitle = {{{WIID Companion}} ({{March}} 2021)},
   author = {Grad{\'i}n, Carlos},
@@ -335,6 +324,17 @@
   institution = {{UNU-WIDER}},
   doi = {10.35188/UNU-WIDER/WTN/2021-4},
   url = {https://www.wider.unu.edu/node/238513}
+}
+
+@techreport{gradin_wiid_2021-2,
+  title = {{{WIID Companion}} ({{March}} 2021): Integrated and Standardized Series},
+  shorttitle = {{{WIID Companion}} ({{March}} 2021)},
+  author = {Grad{\'i}n, Carlos},
+  year = {2021},
+  month = mar,
+  institution = {{UNU-WIDER}},
+  doi = {10.35188/UNU-WIDER/WTN/2021-5},
+  url = {https://www.wider.unu.edu/node/238515}
 }
 
 @article{hellebrandt_future_2015,
@@ -432,7 +432,7 @@
   issn = {2040-0209},
   doi = {10.1111/j.2040-0209.2012.00398.x},
   url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.2040-0209.2012.00398.x},
-  copyright = {{\copyright} 2012 Institute of Development Studies}
+  copyright = {{\textcopyright} 2012 Institute of Development Studies}
 }
 
 @article{kerner_does_2017,
@@ -691,7 +691,7 @@
   issn = {1475-4991},
   doi = {10.1111/roiw.12362},
   url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/roiw.12362},
-  copyright = {{\copyright} 2018 International Association for Research in Income and Wealth}
+  copyright = {{\textcopyright} 2018 International Association for Research in Income and Wealth}
 }
 
 @techreport{oecd_bottlenecks_2023,
@@ -705,7 +705,7 @@
   title = {{{ODA Levels}} in 2022},
   author = {OECD, .},
   year = {2023},
-  url = {https://www.oecd.org/dac/financing-sustainable-development/ODA-2022-summary.pdf}
+  url = {https://www.oecd.org/dac/financing-sustainable-development/development-finance-data/}
 }
 
 @article{ortiz_universal_2018,
@@ -717,6 +717,17 @@
   issn = {1556-5068},
   doi = {10.2139/ssrn.3208737},
   url = {https://www.ssrn.com/abstract=3208737}
+}
+
+@book{piketty_brief_2022,
+  title = {{A Brief History of Equality}},
+  author = {Piketty, Thomas},
+  translator = {Rendall, Steven},
+  year = {2022},
+  month = apr,
+  publisher = {{Belknap Press: An Imprint of Harvard University Press}},
+  address = {{Cambridge, Massachusetts}},
+  isbn = {978-0-674-27355-9}
 }
 
 @misc{pinkovskiy_parametric_2009,
@@ -761,7 +772,7 @@
   issn = {1475-4991},
   doi = {10.1111/roiw.12577},
   url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/roiw.12577},
-  copyright = {{\copyright} 2022 International Association for Research in Income and Wealth}
+  copyright = {{\textcopyright} 2022 International Association for Research in Income and Wealth}
 }
 
 @article{ravallion_how_2013,
@@ -882,6 +893,13 @@
   issn = {1356-3467},
   doi = {10.1080/13563467.2023.2217087},
   url = {https://doi.org/10.1080/13563467.2023.2217087}
+}
+
+@techreport{tax_observatory_global_2024,
+  title = {Global {{Tax Evasion}} Report},
+  author = {Tax Observatory, {\relax EU}},
+  year = {2024},
+  url = {https://www.taxobservatory.eu//www-site/uploads/2023/10/global\_tax\_evasion\_report\_24.pdf}
 }
 
 @techreport{un_sustainable_2022,
