--- a/tables/floor.tex
+++ b/tables/floor.tex
@@ -3,10 +3,12 @@
 \caption[Income floor (in \$/day) financed by a 10\% tax above \$10/day.]{\label{tab:tax}Income floor (in \$/day) financed by a 10\% tax above \$10/day for major lower-income countries in 2030.}
 \makebox[\textwidth][c]{
 \begin{tabular}[t]{lrrrrrrr}
-\toprule Growth scenario over 2022--2030 & 3\% & 3\% & \multicolumn{2}{c}{Projection} & 7\% & 7\% & \makecell{7\% since \\ 2015} \\ HFCE rescaling & & \checkmark & & \checkmark & & \checkmark & \\  \midrule
+\toprule Growth scenario over 2022--2030 & 3\% & 3\% & \multicolumn{2}{c}{Projection} & 7\% & 7\% & \makecell{7\% since \\2015} \\ 
+HFCE rescaling & & \checkmark & & \checkmark & & \checkmark & \\ 
+ \midrule
 World & 8.6 & 10.3 & 8.4 & 10.1 & 12.1 & 14.4 & 16.7\\
-Low-Income Countries & 2.1 & 2.4 & 1.6 & 1.9 & 3.6 & 4.0 & 4.9\\
-Sub-Saharan Africa & 1.9 & 2.4 & 1.7 & 2.2 & 2.8 & 3.4 & 5.0\\
+Low-Income Countries & 1.9 & 2.2 & 1.5 & 1.7 & 3.3 & 3.6 & 4.4\\
+Sub-Saharan Africa & 2.1 & 2.7 & 1.9 & 2.5 & 3.1 & 3.9 & 5.3\\
 \midrule Angola & 2.1 & 3.2 & 1.7 & 2.8 & 3.1 & 4.6 & 7.8\\
 Bangladesh & 4.4 & 6.2 & 4.6 & 6.4 & 6.4 & 8.7 & 7.3\\
 Benin & 3.2 & 3.8 & 2.8 & 3.4 & 4.8 & 5.5 & 6.8\\
