--- a/tables/gain.tex
+++ b/tables/gain.tex
@@ -1,6 +1,7 @@
 \begin{table}[b]
 
-\caption[Net gain per country of global antipoverty taxes.]{\label{tab:gain}Net gain per country of a global antipoverty tax above \$100/day, for most populous countries in 2030 after 3\% growth.}
+\caption[Net gain per country of global antipoverty taxes.]{\label{tab:gain}Net gain per country of a global antipoverty tax above \$100/day, for most populous countries in 2030 after 3\%
+growth since 2022.}
 \centering
 \begin{tabular}[t]{lrrrrrr}
 \toprule Tax rate & 1.2\% & 1.2\% & 0.3\% & 0.3\% & 10\% & 10\%  \\ 
@@ -10,8 +11,8 @@ Revenues (\% global income) & 0.15 & 0.41 & 0.04 & 0.10 & 1.20 & 3.42\\
 International transfers & 0.14 & 0.31 & 0.04 & 0.09 & 1.17 & 2.32\\
 Income floor (\$/day) & 2.17 & 3.31 & 1.44 & 2.14 & 4.29 & 7.00\\
 Gini & 0.62 & 0.71 & 0.62 & 0.71 & 0.60 & 0.65\\
-\midrule Low-Income Countries & 3.28 & 8.21 & 0.94 & 2.47 & 18.87 & 42.83\\
-Sub-Saharan Africa & 3.55 & 9.40 & 0.94 & 2.74 & 21.70 & 48.17\\
+\midrule Low-Income Countries & 4.05 & 10.47 & 1.17 & 3.28 & 22.24 & 50.86\\
+Sub-Saharan Africa & 3.26 & 8.63 & 0.86 & 2.52 & 19.94 & 44.26\\
 \midrule Algeria & 0.00 & -0.27 & 0.00 & -0.07 & 0.04 & -0.41\\
 Angola & 3.84 & 5.87 & 1.19 & 2.03 & 19.27 & 24.99\\
 Argentina & -0.05 & -0.37 & -0.01 & -0.09 & -0.40 & -3.07\\
