--- a/tables/tax7.tex
+++ b/tables/tax7.tex
@@ -3,11 +3,14 @@
 \caption[Anti-acute-poverty taxes for major lower-income countries in 2030.]{\label{tab:tax7}Antipoverty tax required to eliminate acute poverty (at \$6.85/day) in major lower-income countries in 2030 (marginal rate in \%).}
 \makebox[\textwidth][c]{
 \begin{tabular}[t]{lrrrrrrrrr}
-\toprule Taxation threshold (\$/day) & 6.85 & 18.15 & 18.15 & 18.15 & 18.15 & 6.85 & 6.85 & 6.85 & 18.15 \\ Growth scenario & 3\% & 7\% & 3\% & Trend & \multicolumn{2}{c}{Projection} & 7\% & 3\% & 7\% \\ HFCE rescaling & & & & & & & & \checkmark & \checkmark \\  \midrule
-World & 5.8 & 3.1 & 8.1 & 7.9 & 8.8 & 6.2 & 2.4 & 4.0 & 2.0\\
-Low-Income Countries & 173.4 & 84.4 & 518.0 & 976.0 & 1293.2 & 327.1 & 46.0 & 111.3 & 53.0\\
-Sub-Saharan Africa & 262.8 & 342.9 & 989.3 & 1183.2 & 1251.7 & 317.6 & 100.9 & 122.5 & 91.3\\
-\midrule Angola & 145.1 & 153.3 & 360.6 & 653.9 & 506.1 & 205.7 & 63.8 & 45.8 & 30.2\\
+\toprule Taxation threshold (\$/day) & 6.85 & 18.15 & 18.15 & 18.15 & 18.15 & 6.85 & 6.85 & 6.85 & 18.15 \\ 
+Growth scenario & 3\% & 7\% & 3\% & Trend & \multicolumn{2}{c}{Projection} & 7\% & 3\% & 7\% \\ 
+HFCE rescaling & & & & & & & & \checkmark & \checkmark \\ 
+ \midrule
+World & 5.8 & 3.1 & 8.1 & 8.1 & 8.8 & 6.2 & 2.4 & 4.0 & 2.0\\
+Low-Income Countries & 210.0 & 107.8 & 640.1 & 1269.2 & 1592.3 & 392.5 & 57.5 & 136.8 & 68.1\\
+Sub-Saharan Africa & 190.8 & 198.4 & 501.4 & 753.1 & 634.2 & 231.9 & 78.5 & 85.1 & 58.6\\
+\midrule Angola & 145.1 & 153.3 & 360.6 & 1450.0 & 506.1 & 205.7 & 63.8 & 45.8 & 30.2\\
 Bangladesh & 58.3 & 54.6 & 289.5 & 91.3 & 250.1 & 50.9 & 13.0 & 13.6 & 5.2\\
 Benin & 110.9 & 129.5 & 489.2 & 713.7 & 747.4 & 160.7 & 34.8 & 57.4 & 37.3\\
 Burkina Faso & 109.5 & 111.8 & 331.0 & 358.6 & 422.7 & 134.1 & 45.0 & 109.5 & 111.8\\
@@ -18,7 +21,7 @@ D.R. Congo & 1125.8 & 2436.1 & 8119.6 & $>$ 10k & $>$ 10k & 1422.3 & 420.2 & 112
 Ethiopia & 128.1 & 147.4 & 597.2 & 208.3 & 415.6 & 92.5 & 36.1 & 128.1 & 147.4\\
 Ghana & 71.4 & 83.1 & 272.4 & 279.2 & 317.1 & 80.8 & 26.9 & 18.9 & 11.1\\
 Guinea & 175.2 & 444.1 & 3599.3 & 1477.9 & 6695.5 & 262.8 & 41.2 & 103.7 & 83.7\\
-Haiti & 303.5 & 368.9 & 902.7 & 1830.1 & 1412.4 & 453.5 & 133.9 & 77.4 & 52.5\\
+Haiti & 303.5 & 368.9 & 902.7 & 1963.9 & 1412.4 & 453.5 & 133.9 & 77.4 & 52.5\\
 India & 85.5 & 71.2 & 294.9 & 124.4 & 258.1 & 75.9 & 23.1 & 15.7 & 6.6\\
 Ivory Coast & 54.2 & 55.6 & 247.7 & 175.8 & 375.2 & 76.2 & 15.9 & 17.8 & 8.9\\
 Kenya & 132.1 & 162.4 & 559.3 & 642.7 & 780.9 & 176.2 & 46.3 & 28.1 & 15.6\\
@@ -34,13 +37,13 @@ Papua New Guinea & 222.4 & 350.3 & 1266.8 & 2058.6 & 1953.5 & 318.5 & 80.6 & 142
 Rwanda & 280.9 & 335.9 & 899.7 & 593.0 & 893.9 & 279.2 & 113.8 & 94.5 & 62.9\\
 Senegal & 56.3 & 52.5 & 214.5 & 190.7 & 333.4 & 82.7 & 16.6 & 42.1 & 29.2\\
 South Sudan & 1009.5 & 864.8 & 5994.0 & $>$ 10k & NA & NA & 193.0 & 494.9 & 267.0\\
-Sudan & 585.9 & 821.8 & 2406.0 & 6027.4 & 4500.9 & 1054.7 & 187.5 & 66.5 & 36.7\\
+Sudan & 585.9 & 821.8 & 2406.0 & $>$ 10k & 4500.9 & 1054.7 & 187.5 & 66.5 & 36.7\\
 Tanzania & 421.2 & 537.3 & 1480.9 & 1564.0 & 1809.7 & 497.8 & 163.0 & 122.4 & 80.3\\
 Uganda & 359.2 & 417.4 & 1029.6 & 1351.5 & 1234.0 & 431.9 & 143.1 & 134.1 & 91.7\\
 Uzbekistan & 313.3 & 482.6 & 1904.2 & 1326.4 & 1694.7 & 286.1 & 98.3 & 178.7 & 141.7\\
 Yemen & 82.5 & 18.0 & 363.7 & 2537.4 & NA & NA & 6.1 & 57.3 & 10.5\\
-Zambia & 414.3 & 513.9 & 1183.8 & 2274.9 & 1476.0 & 505.8 & 202.3 & 282.4 & 268.1\\
-Zimbabwe & 174.3 & 180.5 & 451.9 & 905.7 & 736.9 & 266.1 & 77.5 & 129.9 & 110.7\\
+Zambia & 414.3 & 513.9 & 1183.8 & 2283.8 & 1476.0 & 505.8 & 202.3 & 282.4 & 268.1\\
+Zimbabwe & 174.3 & 180.5 & 451.9 & 1156.5 & 736.9 & 266.1 & 77.5 & 129.9 & 110.7\\
 \bottomrule
 \end{tabular}}
 \end{table}
