--- a/tables/trend.tex
+++ b/tables/trend.tex
@@ -1,14 +1,15 @@
 \begin{table}[b]
 
-\caption[Expected poverty and growth in 2030 in lower-income countries.]{\label{tab:tax}Expected poverty and growth in major lower-income countries: trend and projected growth rate, poverty rates and gaps at \$2.15 and \$6.85/day in 2030 after 3\% growth.}
+\caption[Expected poverty and growth in 2030 in lower-income countries.]{\label{tab:tax}Expected poverty and growth in major lower-income countries: trend and projected growth rate, poverty rates and gaps at \$2.15 and \$6.85/day in 2030 after 3\%
+growth since 2022.}
 \makebox[\textwidth][c]{
 \begin{tabular}[t]{lcccccccc}
 \toprule \makecell{\\Indicator} & \makecell{Growth\\Trend} & \makecell{Growth\\Autoregressive} & \multicolumn{3}{c}{\makecell{Poverty rate\\(in \%)}} & \multicolumn{3}{c}{\makecell{Poverty gap\\(in \% of mean income)}}  \\ 
 & 2014--2019 & Projection & \$2.15 & \$3.65 & \$6.85 & \$2.15 & \$3.65 & \$6.85 \\ 
 \midrule
 World & 3.4 & 2.9 & 5 & 15 & 38 & 0.1 & 0.8 & 4.4\\
-Low-Income Countries & 2.0 & 2.3 & 24 & 48 & 78 & 3.2 & 13.0 & 49.8\\
-Sub-Saharan Africa & 1.0 & 2.0 & 24 & 50 & 79 & 3.5 & 14.8 & 57.6\\
+Low-Income Countries & 1.9 & 2.3 & 27 & 52 & 80 & 3.9 & 15.5 & 56.7\\
+Sub-Saharan Africa & 1.0 & 2.0 & 24 & 50 & 79 & 3.2 & 13.6 & 52.9\\
 \midrule Angola & -4.2 & 1.3 & 28 & 49 & 75 & 3.7 & 13.6 & 47.9\\
 Bangladesh & 5.8 & 3.4 & 1 & 13 & 58 & 0.0 & 1.1 & 16.0\\
 Benin & 1.8 & 1.7 & 7 & 29 & 69 & 0.4 & 4.3 & 29.3\\
